blog/infra/k8s/comments.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: aeksaekhow/comments
