blog/infra/k8s/query.deploymenet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: aeksaekhow/query
