blog/infra/k8s/comments.service.yml
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 5001
      targetPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-nodeport-service
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 5001
      targetPort: 5001
