blog/infra/k8s/event-bus.service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 5005
      targetPort: 5005
