blog/infra/k8s/moderation.service.yml
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 5003
      targetPort: 5003
