blog/infra/k8s/posts.service.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-service
spec:
  type: NodePort
  selector: 
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 5000
      targetPort: 5000
