blog/infra/k8s/query.service.yml
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 5002
      targetPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: query-nodeport-service
spec:
  type: NodePort
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 5002
      targetPort: 5002
